--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -1,9 +1,9 @@
 name: Build APK
 
 on:
+  workflow_dispatch:  # فقط اجرای دستی — برای تست
   push:
     branches: [ main ]
-  workflow_dispatch:  # این خط به شما اجازه می‌دهد workflow را دستی اجرا کنید
 
 jobs:
   build:
@@ -22,8 +22,11 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
+      - name: Run Flutter analyze
+        run: flutter analyze
+
       - name: Build APK
-        run: flutter build apk --release
+        run: flutter build apk --release --no-sound-null-safety
 
       - name: Upload APK as artifact
         uses: actions/upload-artifact@v4
