--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -23,8 +23,8 @@ jobs:
       - name: Run Flutter analyze
         run: flutter analyze
 
-      - name: Build APK
-        run: flutter build apk --release --no-sound-null-safety
+      - name: Build APK (with verbose output)
+        run: flutter build apk --release --no-sound-null-safety --verbose
 
       - name: Upload APK as artifact
         uses: actions/upload-artifact@v4
