--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -6,28 +6,67 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    env:
+      # تنظیمات مورد نیاز برای Google Sheets API
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # برای دریافت تمام history
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: gradle
 
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.24.0'
           channel: 'stable'
+          cache: true
+          cache-key: flutter-3.24.0-stable
 
-      - name: Install dependencies
-        run: flutter pub get
+      - name: Install Android SDK
+        uses: android-actions/setup-android@v3
+        with:
+          cmdline-tools-version: '9.0'
+          sdk-versions: '34,33,32,31,30,29,28,27,26,25,24,23,22,21'
+
+      - name: Verify environment
+        run: |
+          flutter doctor -v
+          echo "Flutter version: $(flutter --version)"
+          echo "Dart version: $(dart --version)"
+          echo "Android SDK version: $(sdkmanager --version)"
+
+      - name: Get dependencies
+        run: flutter pub get --verbose
 
       - name: Run Flutter analyze
-        run: flutter analyze
+        run: flutter analyze --no-pub
 
-      - name: Build APK (with verbose output)
-        run: flutter build apk --release --no-sound-null-safety --verbose
+      - name: Clean build
+        run: flutter clean
 
-      - name: Upload APK as artifact
+      - name: Build APK
+        run: flutter build apk --release --target-platform=android-arm64 --split-per-abi --verbose
+        env:
+          # برای مدیریت احراز هویت بدون نمایش هشدار
+          SUPPRESS_ANALYTICS: true
+
+      - name: Verify APK
+        run: |
+          ls -la build/app/outputs/flutter-apk/
+          file build/app/outputs/flutter-apk/app-arm64-v8a-release.apk
+
+      - name: Upload APK artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: app-release-apk
-          path: build/app/outputs/flutter-apk/app-release.apk
+          name: letter-management-app-apk
+          path: build/app/outputs/flutter-apk/*.apk
+          retention-days: 30
